--- a/index.html
+++ b/index.html
@@ -6,18 +6,16 @@
     <title>Huzz Translator</title>
 </head>
 <body>
-    <h1>Huzz Translator</h1>
-    <p>Enter a sentence and click Translate to convert it:</p>
+    <h1>worst creation i have ever conjured up</h1>
+    <p>enter sentence:</p>
     <textarea id="input-sentence" rows="4" cols="50" placeholder="Type your sentence here..."></textarea><br>
     <button onclick="translate()">Translate</button>
-    <h2>Translated Sentence:</h2>
+    <h2>Transluzzed Sentuzz:</h2>
     <p id="output-sentence"></p>
 
     <script>
         async function translate() {
             const sentence = document.getElementById('input-sentence').value;
-
-            // Send request to the server to translate the sentence
             const response = await fetch('/translate', {
                 method: 'POST',
                 headers: {
